# edugame

./: .gitignore  EduGame.cabal  Makefile  README  TODO  data.hs  educards.hi  educards.hs  parse.pl  update.pl  v2.hs  v3.hs  v3的設計  工作藍圖.graffle
EduGame/: Parse.hs  Render.hs  Types.hs  Utils.hs
data/: actions.txt  assistants.txt  courses.txt  environments.txt  goals.txt  lessons.txt  skills.txt  students.txt
data/images/environments/: 3.jp2
data_new/: lessons.txt
quote_bkup/: 啟蒙導師說明書.json
v2/: actions.txt  environments.txt  lessons.txt  students.txt
v2.0_backup/edu_test.graffle/: data.plist  image32.tiff  image33.tiff  image35.tiff  image39.tiff  image4.tiff  image41.tiff  image43.tiff
v2.0_backup/edu_test.graffle/QuickLook/: Thumbnail.tiff
v2/images/environments/: 2.jp2
v3/: courses.txt  goals.txt  students.txt
v3.0的設計/: README
v3/images/environments/: 2.jp2
啟蒙導師v2.0_backup/edu_test.graffle/: image1.tiff  image2.tiff  image25.tiff  image26.tiff  image27.tiff  image29.tiff  image3.tiff  image30.tiff  image31.tiff  image36.tiff  image37.tiff  image40.tiff  image42.tiff  image44.tiff  image46.tiff
學科設計(v3.0生效)/: 啟蒙學科分化.rtf
